force-app/main/default/objects/Team_Lead__c/Team_Lead__c.object-meta.xml
<CustomObject>
    <label>Team Lead</label>
    <nameField>
        <label>Team Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>