force-app/main/default/objects/Team_Lead__c/fields/Access_Location__c.field-meta.xml
<CustomField>
    <fullName>Access_Location__c</fullName>
    <label>Access Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>