force-app/main/default/objects/Team_Lead__c/fields/Autoinspekt__c.field-meta.xml
<CustomField>
    <fullName>Autoinspekt__c</fullName>
    <label>Auto Inspekt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ON</fullName>
            </value>
            <value>
                <fullName>OFF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>