force-app/main/default/objects/Team_Lead__c/fields/Login_Id__c.field-meta.xml
<CustomField>
    <fullName>Login_Id__c</fullName>
    <label>Login Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>