force-app/main/default/objects/Team_Lead__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <externalId>true</externalId>
    <label>User Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>