force-app/main/default/objects/Team_Lead__c/fields/ZM_Name__c.field-meta.xml
<CustomField>
    <fullName>ZM_Name__c</fullName>
    <label>ZM Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>